feat(reports) get instructor month class count
