# docs/swagger.yaml
@@ -7859,6 +7859,39 @@ paths:
       summary: Get Weekly Sales Chart
       tags:
       - Reports Branch
+  /reports/instructors/classes-count:
+    get:
+      description: Retrieves the total number of classes assigned to the instructor
+        for the current month.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Classes count KPI
+          schema:
+            properties:
+              data:
+                $ref: '#/definitions/reportdomain.KPICard'
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            properties:
+              error:
+                type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get Instructor Monthly Classes Count
+      tags:
+      - Reports Instructor
   /reports/instructors/next-class:
     get:
       description: Retrieves the start time of the next class for a specific instructor
